<resources>
    <string name="app_name" translatable="false">OCA</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="basicInfo_characterAge">Age</string>
    <string name="genderMale">Male</string>
    <string name="basicInfo_avatarDescription">Character look</string>
    <string name="basicInfo_characterGender">Gender</string>
    <string name="basicInfo_characterJob">Job</string>
    <string name="basicInfo_characterName">Character name</string>
    <string name="genderFemale">Female</string>
    <string name="tab_string_attributes">Attributes</string>
    <string name="tab_string_basicInfo">Info</string>
    <string name="attribute_vitality">Vitality</string>
    <string name="attribute_reflex">Reflex</string>
    <string name="attribute_organism">Organism</string>
    <string name="tab_string_skills">Skills</string>
    <string name="attribute_organism_description">-</string>
    <string name="attribute_vitality_description">-</string>
    <string name="attribute_reflex_description">-</string>
    <string name="attribute_condition">Condition</string>
    <string name="attribute_strength">Strength</string>
    <string name="attribute_agility">Agility</string>
    <string name="attribute_psyche">Psyche</string>
    <string name="attribute_charisma">Charisma</string>
    <string name="attribute_discipline">Discipline</string>
    <string name="attribute_intelligence">Intelligence</string>
    <string name="attribute_empathy">Empathy</string>
    <string name="attribute_manipulation">Manipulation</string>
    <string name="attribute_condition_description">-</string>
    <string name="attribute_strength_description">-</string>
    <string name="attribute_agility_description">-</string>
    <string name="attribute_psyche_description">-</string>
    <string name="attribute_intelligence_description">-</string>
    <string name="attribute_charisma_description">-</string>
    <string name="attribute_empathy_description">-</string>
    <string name="attribute_manipulation_description">-</string>
    <string name="attribute_discipline_description">-</string>
    <string name="reason_attributes_are_already_committed">Attributes are already committed.</string>
    <string name="reason_attributes_points_remaining">There are still some points you haven\'t spent!</string>
    <string name="reason_attributes_spent_too_many_points">Too many points were spent!</string>
    <string name="reason_attribute_not_balanced">%1$s is not balanced!</string>
    <string name="tabSkills_dependentOn">Dependent on:</string>
    <string name="ok">OK</string>
    <string name="criticalSuccess">Critical Success</string>
    <string name="bigSuccess">Big Success</string>
    <string name="successFlow">Flow</string>
    <string name="failure">Failure</string>
    <string name="criticalFailure">Critical Failure</string>
    <string name="success">Success</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_commitAttributes_title">Are you sure you want to submit?</string>
    <string name="dialog_commitAttributes_message">The commit is permanent!</string>
    <string name="character_editor_name">Character</string>
    <string name="inventory_editor_name">Inventory</string>
    <string name="currency_name_main">opal</string>
    <string name="currency_symbol" translatable="false">ᱵ</string>
    <string name="currency_name_small">menilite</string>
    <string name="item_blackOpal">Black Opal</string>
    <string name="add_new_item">Add new item</string>
    <string name="item_add_simple_notification">Added: %1$s</string>
    <string name="dialog_howmuch">How much?</string>
    <string name="dialog_remove_item_question">Remove %1$s?</string>
    <string name="cancel">Cancel</string>
    <string name="inv_empty">Empty</string>
    <string name="equipment_editor_name">Equipment</string>
    <string name="belongings_manager_name">Belongings</string>
    <string name="battleground_enemy">Enemy</string>
    <string name="battleground_you">You</string>
    <string name="battleground_blood">Blood</string>
    <string name="nav_battlground_name">Duel</string>
    <string name="ledger_entity_used_action_on_entity">%s executed %s on %s</string>
    <string name="ledger_entity_enrolled">%s joined the fight</string>
    <string name="ledger_entity_chose_action">%s will use %s on %s</string>
    <string name="ledger_fight_finished">The fight has ended</string>
    <string name="battleground_attack">Attack</string>
    <string name="battleground_surrender">Surrender</string>
    <string name="battleground_defend">Defend</string>
    <string name="action_punch_description" >-</string>
    <string name="action_kick_description">-</string>
    <string name="event_fight_started_with_blank">Fight started. Participants: %s</string>
    <string name="fighter_turn_started">%s started their turn.</string>
    <string name="fighter_turn_ended">%s ended their turn.</string>
    <string name="awaiting_input_from_blank">Awaiting input from %s</string>
    <string name="example_fragment_title" translatable="false">Example Fragment</string>
    <string name="example_textField" translatable="false">example input</string>
</resources>
