<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_character">
    <fragment
        android:id="@+id/nav_character"
        android:name="com.nerpage.oca.fragments.CharacterManagerFragment"
        android:label="@string/character_editor_name"
        tools:layout="@layout/fragment_character_manager" />
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.nerpage.oca.fragments.InventoryManagerFragment"
        android:label="@string/inventory_editor_name" >
        <action
            android:id="@+id/action_nav_inventory_to_itemDbSelector"
            app:destination="@id/nav_itemdb_selector" />
    </fragment>
    <fragment
        android:id="@+id/nav_itemdb_selector"
        android:name="com.nerpage.oca.fragments.ItemDbSelector"
        android:label="ItemDbSelector" />
    <fragment
        android:id="@+id/nav_belongings"
        android:name="com.nerpage.oca.fragments.BelongingsManagerFragment"
        android:label="@string/belongings_manager_name"/>
    <fragment
        android:id="@+id/nav_battlground"
        android:name="com.nerpage.oca.fragments.BattlegroundFragment"
        android:label="@string/nav_battlground_name" />
</navigation>